# cnake

./: CMakeLists.txt  LICENSE  README.md  icon.rc  readme.md
src/apple/: apple.cpp  apple.h  getCoordinate.cpp  getValue.cpp  initApple.cpp
src/coordinate/: coordinate.h
src/direction/: direction.h
src/gameloop/: gameloop.cpp  gameloop.h
src/input/: input.cpp  input.h
src/main/: main.cpp
src/menu/: menu.cpp  menu.h
src/snake/: eatApple.cpp  getter.cpp  initSnake.cpp  moveSnake.cpp  snake.cpp  snake.h
src/space/: generateAppleInSpace.cpp  initSpace.cpp  moveSnakeInSpace.cpp  printSpace.cpp  renderSpace.cpp  space.cpp  space.h
src/ui/: clearScreen.cpp  ui.cpp  ui.h
src/utils/: utils.h
